--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header class="header">
-        <div>
+        <!-- <div>
             <img class="dev-img" src="images/developer.png" alt="">
-        </div>
-        <div class="navbar">
-            <div>
-                <h1>Ma<span>r</span>y</h1>
-            </div>
-            <div class="buttons">
-                <p>Portfolio</p>
-                <p>Blog</p>
-                <p>Hire Me</p>
+        </div> -->
+        <nav class="navbar">
+
+            <h1 class="nav-title">Ma<span class="special-text">r</span>y</h1>
+           
+            <ul>
+                <li><a href="portfolio">Portfolio</a></li>
+                <li><a href="blog">Blog</a></li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
                 
-            </div>
-        </div>
+        </nav>
 
     </header>
 </body>
