Banner section working

--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
                 
         </nav>
 
+        <div class="banner">
+            <div>
+                <h4 class="b-sub-title">Hi, I am</h4>
+                <h2 class="b-title">Prosenjith Dash Pappu</h2>
+                <p class="b-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div class="b-btn">
+                    <button class="btn-primary">Download CV</button>
+                    <button class="btn-primary">Contact Me</button>
+                </div>
+            </div>
+            <div>
+                <img class="b-img" src="images/hardy.png" alt="">
+            </div>
+        </div>
+
     </header>
 </body>
 </html>
