banner section done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
 
         <div class="banner">
-            <div>
+            <div class="banner-content">
                 <h4 class="b-sub-title">Hi, I am</h4>
                 <h2 class="b-title">Prosenjith Dash Pappu</h2>
                 <p class="b-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
