about section working

--- a/index.html
+++ b/index.html
@@ -40,5 +40,33 @@
         </div>
 
     </header>
+
+    <main>
+        <section class="about">
+            <h2 class="about-title">About Me</h2>
+            <p class="about-des">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="info">
+                <div>
+                    <p class="info-title">Name</p>
+                    <p>Prosenjith Dash Pappu</p>
+                </div>
+                <div>
+                    <p class="info-title">Email</p>
+                    <p>prosenjith.j@gmail.com</p>
+                </div>
+                <div>
+                    <p class="info-title">Date of birth</p>
+                    <p>23 December 2001</p>
+                </div>
+                <div>
+                    <p class="info-title">From</p>
+                    <p>Dhaka,Bangladesh</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
