--- a/index.html
+++ b/index.html
@@ -64,6 +64,40 @@
                 </div>
             </div>
         </section>
+
+        <section class="what-i-do">
+            <h2 class="what-title">What I do</h2>
+            <p class="what-des">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my
+            main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume
+            and project portfolio.</p>
+
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="what-card-title">Vanilla JavaScript</h3>
+                    <p class="what-card-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="what-card-title">React</h3>
+                    <p class="what-card-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="what-card-title">Node.js</h3>
+                    <p class="what-card-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="what-card-title">MongoDB</h3>
+                    <p class="what-card-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
