All most web developer portfolio work completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div> -->
         <nav class="navbar">
 
-            <h1 class="nav-title">Ma<span class="special-text">r</span>y</h1>
+            <h1 class="nav-title">Prosen<span class="special-text">j</span>ith</h1>
            
             <ul>
                 <li><a href="portfolio">Portfolio</a></li>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div>
-                <img class="b-img" src="images/hardy.png" alt="">
+                <img class="b-img" src="images/me.png" alt="">
             </div>
         </div>
 
