Footer section modified done

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
         <div class="banner">
             <div class="banner-content">
-                <h4 class="b-sub-title">Hi, I am</h4>
-                <h2 class="b-title">Prosenjith Dash Pappu</h2>
+                <p class="b-sub-title">Hi, I am</p>
+                <p class="b-title">Prosenjith Dash Pappu</p>
                 <p class="b-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div class="b-btn">
                     <button class="btn-primary">Download CV</button>
@@ -163,7 +163,7 @@
     </main>
     <footer>
         <div class="footer-container">
-            <div>
+            <div class="lets">
                 <h2 class="contact-title">Lets Connect</h2>
                 <p class="contact-des">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00
                     P.M ET, Monday through
@@ -194,7 +194,7 @@
             
                 </div>
             </div>
-            <div class="s">
+            <div class="lets2">
                 <h2 class="contact-title">Let’s Message me</h2>
                 <form action="">
                     <input class="name" type="text" name="name" id="" placeholder="Name">
